完善selectByParam方法，封装一些方法